Add include images

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/faviHarry.png" />
+    <link rel="icon" href="%PUBLIC_URL%/Favicon.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Por aquí van font-awesome y Google Fonts -->
@@ -13,13 +13,12 @@
       rel="stylesheet"
     />
 
-    <!-- CSS de las profes -->
     <link
       rel="stylesheet"
       href="https://beta.adalab.es/resources/stylesheets/all.css"
     />
 
-    <title>HARRY POTTER || Evaluación final modulo 3 || Isabel Collado</title>
+    <title>GAME OF THRONES|| Isabel Collado</title>
   </head>
 
   <body>
